--- a/Turesso/index.html
+++ b/Turesso/index.html
@@ -17,20 +17,34 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-
-
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">O curso foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">A Game Start foi fundada em 2010 e tem como objetivo preparar jogadores para competições, através de treinamentos.</p>
+            <p class="escola-texto-dois">Temos diversos alunos que já foram campeoẽs. Nós somos super unidos e o trabalho em equipe é o mais importante</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são professores?</h2>
-        <img src="Professor.jpg" alt="">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do estudante">
+            <h3 class="estudante-nome">Estudante</h3>
+            <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://instagram.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do estudante">
+            <h3 class="estudante-nome">Estudante</h3>
+            <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+       
+    </div>
     </section>
 </body>
-
 </html>
